--- a/internship.html
+++ b/internship.html
@@ -107,7 +107,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://launchmetrics.applytojob.com/apply/KzJnY0CMdP/Digital-Marketing-SEO-Content-Native-French-Internship'>Digital Marketing / SEO Content (Native French Internship) - Launchmetrics - Career Page</a></h5> 
+<h5><a href='http://launchmetrics.applytojob.com/apply/KzJnY0CMdP/Digital-Marketing-SEO-Content-Native-French-Internship'>Digital Marketing / SEO Content (Native French Internship) - Launchmetrics - Career Page</a></h5> 
 <p><span class="badge badge-light">NYC Paris London Milan Los Angeles Tokyo Madrid</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -125,7 +125,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692229837-intern'>ShopUp Intern | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692229837-intern'>ShopUp Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dhaka, Bangladesh</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -133,7 +133,7 @@
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/agorize/7c5c9aa3-34da-4c78-9fe5-bcf4225359c7'>Agorize - Community Management Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/agorize/7c5c9aa3-34da-4c78-9fe5-bcf4225359c7'>Agorize - Community Management Intern</a></h5> 
 <p><span class="badge badge-light">Hong Kong</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -237,7 +237,7 @@
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787496'>Job Application for Account Management Intern at Lightspeed ENG</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787496'>Job Application for Account Management Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -249,7 +249,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/velodyne/jobs/1762722'>Job Application for Intern at Velodyne</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/velodyne/jobs/1762722'>Job Application for Intern at Velodyne</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -261,15 +261,15 @@
 <p><span class="badge badge-light">Texas, United States New York</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-fr/job/o3BCafwa'>Carri?res Trek Bicycle - Marketing Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/trek-bicycle-fr/job/o3BCafwa'>Carri?res Trek Bicycle - Marketing Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://studyportals.workable.com/j/31B6D169F0'>Studyportals - Jobs: B2B Marketing Internship - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://studyportals.workable.com/j/31B6D169F0'>Studyportals - Jobs: B2B Marketing Internship - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://geoblink.workable.com/j/E9C42F0A2C'>Geoblink - Jobs: Finance &amp; Admin Assistant (Internship) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://geoblink.workable.com/j/E9C42F0A2C'>Geoblink - Jobs: Finance &amp; Admin Assistant (Internship) - Apply online</a></h5> 
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -338,7 +338,7 @@ Stuart.</p>
 <p><span class="badge badge-light">Santa Barbara</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/arkera/44d70e8e-1ab4-4bda-8c4b-dbbd2bb91b94'>Arkera - Emerging Markets Research Analyst Internship</a></h5> 
+<h5><a href='https://jobs.lever.co/arkera/44d70e8e-1ab4-4bda-8c4b-dbbd2bb91b94'>Arkera - Emerging Markets Research Analyst Internship</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -404,7 +404,7 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://marketplacedistri.join.com/jobs/260211-internship-ppc-marketeer-for-fast-growing-startup-in-lucca-italy'>Job @ marketplacedistri (Lucca): Internship: PPC m... | JOIN</a></h5> 
+<h5><a href='https://marketplacedistri.join.com/jobs/260211-internship-ppc-marketeer-for-fast-growing-startup-in-lucca-italy'>Job @ marketplacedistri (Lucca): Internship: PPC m... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -424,7 +424,7 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://marketplacedistri.join.com/jobs/259178-internship-result-driven-business-developer-with-a-drive-for-international-e-commerce'>Job @ marketplacedistri (Lucca): Internship: Resul... | JOIN</a></h5> 
+<h5><a href='https://marketplacedistri.join.com/jobs/259178-internship-result-driven-business-developer-with-a-drive-for-international-e-commerce'>Job @ marketplacedistri (Lucca): Internship: Resul... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -462,7 +462,7 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
